# era-zkevm_tester

./: .gitignore  Cargo.toml  README.md  tmp.json
.github/workflows/: ci.yaml  fmt.yaml
src/: compiler_tests.rs  default_environment.rs  events.rs  evm_deploy.rs  evm_deploy_tracer.rs  hashmap_based_memory.rs  lib.rs  runner.rs  trace.rs
src/abi/: KnownCodesStorage.json
src/runners/: compiler_tests.rs  debug_tracer.rs  events.rs  hashmap_based_memory.rs  mod.rs  simple_witness_tracer.rs  vm2_runner.rs
src/tests/: mod.rs  superior_tests.rs
src/tests/simple/: add.rs  debug.rs  mod.rs  ret.rs  uma.rs
src/utils/: mod.rs
