[package]
name = "zkevm_tester"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zk_evm = { git = "https://github.com/matter-labs/zk_evm.git", branch = "v1.1.1" }
zkevm-assembly = { git = "https://github.com/matter-labs/zkEVM-assembly.git", branch = "v1.1.1" }

# zk_evm = {path = "../zk_evm"}
# zkevm-assembly = {path = "../zkEVM-assembly"}

num-bigint = "0.4"
num-traits = "0.2"
hex = "*"
serde = "1"
serde_json = "1"
vlog = "0.1"
sha2 = "0.10"
futures = "0.3"
tracing = "0.1"

[features]
default = ["external_testing"]
external_testing = []

[profile.release]
debug = true

[[bin]]
name = "profile"
test = false
bench = false
