[package]
name = "zkevm_tester"
version = "1.4.1"
edition = "2021"

resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zk_evm = { git = "https://github.com/matter-labs/era-zk_evm", branch = "v1.4.1" }
zk_evm_abstractions = { git = "https://github.com/matter-labs/era-zk_evm_abstractions", branch = "v1.4.1" }
zkevm-assembly = { git = "https://github.com/matter-labs/era-zkEVM-assembly", branch = "v1.4.1" }

# zk_evm = {path = "../zk_evm"}
# zkevm-assembly = {path = "../zkEVM-assembly"}

anyhow = "1.0"
num-bigint = "0.4"
num-traits = "0.2"
hex = "*"
serde = "1"
serde_json = "1"
vlog = "0.1"
sha2 = "0.10"
futures = "0.3"
tracing = "0.1"

[features]
default = ["external_testing"]
external_testing = []

[profile.release]
debug = true

[[bin]]
name = "profile"
test = false
bench = false
